[package]
name = "ratcrawler"
version = "0.1.0"
edition = "2021"
description = "A high-performance web crawler and backlink analyzer written in Rust"
authors = ["RatCrawler Team"]

[[bin]]
name = "rat-crawler"
path = "src/main.rs"

[[bin]]
name = "ratcrawler"
path = "src/main_intelligent.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "brotli"] }
scraper = "0.17"
rusqlite = { version = "0.29", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.4"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
rayon = "1.7"
petgraph = "0.6"
md5 = "0.7"
base64 = "0.21"
uuid = { version = "1.0", features = ["v4", "serde"] }
csv = "1.3"
env_logger = "0.10"
log = "0.4"
sha2 = "0.10"
urlencoding = "2.1"
tokio-cron-scheduler = "0.9"
tracing = "0.1"
tracing-subscriber = "0.3"
warp = "0.3"
askama = "0.12"
askama_warp = "0.12"
sysinfo = "0.29"
handlebars = "4.4"
minijinja = "1.0"
rand = "0.8"
clap = { version = "4.4", features = ["derive"] }

[dev-dependencies]
tempfile = "3.8"
